2003/12/07 16:19 (-0500) rwmcfa1

 	* xs/GtkCalendar.xs, xs/GtkTextIter.xs, xs/GtkTreeModel.xs,
	xs/GtkWidget.xs, xs/PangoTabs.xs: apidoc added/fixed.

2003/12/07 16:19 (-0500) rwmcfa1

	* pm/SimpleList.pm: DELETE fixed, SPLICE implemented for simplelist.

	* t/19.SimpleList.t: test all of the splice stuff

	* examples/simplelist.pl: (muppet) test the new splice stuff

2003/12/06 01:30 (-0500) rwmcfa1

 	* xs/GtkAccelGroup.xs: Gtk2-> functions moved under Gtk2::AccellGroups
	which seems to make more sense.

 	* xs/GtkAccelMap.xs: intial import, 3/4 complete.
 
 	* t/accel-group-map.t: test out the new AccelMap stuff, in conjunction
 	with AccelGroup. 

	* xs_files-2.0: added xs/GtkAccelMap.xs

2003/12/05 13:42 (-0500) muppetman

	D Changes: we haven't maintained this since May, we use ChangeLog.

	D fetch_faq.pl
	D genkeysyms.pl
	D genmaps.pl
	D podifystockitems.pl
	A tools/fetch_faq.pl
	A tools/genkeysyms.pl
	A tools/genmaps.pl
	A tools/podifystockitems.pl
	move the not-to-be-installed helper scripts to a subdirectory to
	reduce clutter.

	A tools/podifyenums.pl
	* Makefile.PL: add tool and use it to generate a single pod file
	listing the values of all the enum and flags types listed in the
	maps file, installed as Gtk2::enums(3pm).

	* MANIFEST: updated to reflect all that movement.

2003/12/05 12:53 (-0500) rwmcfa1

	* t/accel-group-map.t: updated and more complete

	* xs/GtkAccelGroup.xs: added a synopsis mainly showing that 
	Gtk2::Window::add_accel_group is normally used. moved activate and
	groups_from_object to the Gtk2 namespace and added class params for
	them.

2003/12/05 07:49 (-0500) rwmcfa1

	* t/accel-group-map.t: initial import of accel group and accel map test
	accel has some issues, way more to come, and resolution of those as 
	well.

2003/12/04 23:23 (-0500) rwmcfa1

	* t/calendar.t: initial import

2003/12/04 21:35 (-0500) muppetman

	* Gtk2.pm: bump version to 1.030 for next unstable devel series.
	sync authors section with the AUTHORS file.
